--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,17 @@
 			<artifactId>cupertino</artifactId>
 			<version>1.0.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>2.14</version>
+		</dependency>
+		<!-- Required only when you are using JAX-RS Client -->
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>2.14</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
